# xiaomusic

./: .gitignore  config-example.json  config_temp.json  download_mp3.sh  downloader.sh  pyproject.toml  setting-example.json  xiaomusic.spec  xiaomusic_init.sh  xm.sh  xm_note3.sh
ai/bot/: __init__.py  base_bot.py  chatgptapi_bot.py  deepseek_bot.py  gemini_bot.py  glm_bot.py  langchain_bot.py  newbing_bot.py  qwen_bot.py
ai/tts/: __init__.py  azure.py  base.py  edge.py  mi.py  openai.py
broker/: brokerserver.py  monitor.py  mqttdevice.py
test/: test_asyncio.py
xiaomusic/: cli.py  config.py  const.py  crontab.py  httpserver.py  res_loader.py  socket.py  utils.py  xiaomusic.py
xiaomusic/static/: app.js  index.html  style.css
xiaomusic/static/monitor/: app.js  index.html  monitor.js  style.css
xiaomusic/static/myplayer/: app.js  index.html  setting.html  style.css
xiaomusic/static/pure/: index.html
